# marketing-agent-cli

./: .gitignore  README.md  main.py  pyproject.toml  txt.txt
docs/: reference.md
my-mcp-abilities/: .gitignore  composer.json  my-mcp-abilities.php
tests/: chat-plan.py  test_wp_auth.py
