[project]
name = "marketing-ai-agent-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-analytics-data>=0.19.0",
    "google-api-python-client>=2.185.0",
    "google-auth>=2.42.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "openai>=2.6.1",
    "openai-agents>=0.4.2",
    "openai-agents-mcp>=0.0.8,<0.1.0",
    "mcp-agent>=0.2.4",
    "pydantic>=2.12.3",
]
